// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox alt 1`] = `
<div
  className="sc-1e38spu-0 hjSwXu"
>
  <input
    className="sc-1e38spu-0 djHjgm"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 iTOwcU sc-1e38spu-0 dRuXpO"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#D64A36"
      height="17"
      rx="1.5"
      stroke="#D64A36"
      width="17"
      x="0.5"
      y="0.5"
    />
    <path
      d="M4.5 10L8 13L14 4"
      stroke="white"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 iwbJfe sc-1e38spu-0 dRuXpO"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="white"
      height="17"
      rx="1.5"
      stroke="#E7E7E6"
      width="17"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 bfWHZQ sc-1e38spu-0 dRuXpO"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#F5F5F5"
      height="17"
      rx="1.5"
      stroke="#F5F5F5"
      width="17"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 gWEMG sc-1e38spu-0 dRuXpO"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#F5F5F5"
      height="17"
      rx="1.5"
      stroke="#F5F5F5"
      width="17"
      x="0.5"
      y="0.5"
    />
    <path
      d="M4.5 10L8 13L14 4"
      stroke="#BABABA"
    />
  </svg>
</div>
`;

exports[`Checkbox default 1`] = `
<div
  className="sc-1e38spu-0 hjSwXu"
>
  <input
    className="sc-1e38spu-0 djHjgm"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 iTOwcU sc-1e38spu-0 dRuXpO"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="white"
      height="17"
      rx="1.5"
      stroke="#F5F5F5"
      width="17"
      x="0.5"
      y="0.5"
    />
    <path
      d="M4.5 10L8 13L14 4"
      stroke="#D64A36"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 iwbJfe sc-1e38spu-0 dRuXpO"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="white"
      height="17"
      rx="1.5"
      stroke="#E7E7E6"
      width="17"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 bfWHZQ sc-1e38spu-0 dRuXpO"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#F5F5F5"
      height="17"
      rx="1.5"
      stroke="#F5F5F5"
      width="17"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 gWEMG sc-1e38spu-0 dRuXpO"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#F5F5F5"
      height="17"
      rx="1.5"
      stroke="#F5F5F5"
      width="17"
      x="0.5"
      y="0.5"
    />
    <path
      d="M4.5 10L8 13L14 4"
      stroke="#BABABA"
    />
  </svg>
</div>
`;
